--- a/popup/custom.css
+++ b/popup/custom.css
@@ -70,8 +70,13 @@ body {
     min-width: 150px;
 }
 
-
-
+.specialStyleTextArea{
+    user-select: none;
+}
+ img{
+     max-width: 100%;
+     max-height: 100%;
+ }
 
 
 
