--- a/popup/custom.css
+++ b/popup/custom.css
@@ -78,7 +78,15 @@ body {
      max-height: 100%;
  }
 
-
+ .AMCustomContent .popBox .customUl li{
+     display: none;
+ }
+.AMCustomContent .popBox .customUl .show{
+    display: block;
+}
+.img .typeImg,.aTage .typeA,.text .typeNormal,.showAll li{
+    display: block!important;
+}
 
 
 
