--- a/popup/custom.css
+++ b/popup/custom.css
@@ -3,14 +3,13 @@ body {
 }
 
 .AMCustomContent {
-    width: 60%;
-    /*height: auto;*/
-    height: 500px;
+    width: 100%;
+    height: auto;
+    /*height: 500px;*/
     overflow-y: auto;
-    border: 1px solid #797E8B;
     position: absolute;
     right: 0;
-    top: 0;
+    top: 30px;
 }
 
 .AMCustomContent .popBox{
@@ -90,7 +89,45 @@ body {
 
 
 
-
+.popContent{
+    width: 50%;
+    min-width: 300px;
+    height: auto;
+    min-height: 600px;
+    overflow-y: auto;
+    border: 1px solid #797E8B;
+    z-index: 999999999999999999;
+    position: absolute;
+    background-color: #fff;
+    box-shadow: 2px 2px 10px 2px #797E8B;
+    top: 0;
+    left: 50%;
+}
+.popContent .movePlace{
+    padding: 10px 0;
+    margin: 0;
+    position: relative;
+    width: 100%;
+    height: 20px;
+    top: 0;
+    background-color: #ffffff;
+}
+.popContent .movePlace span{
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 20px;
+    background-size: 100% 100%;
+    cursor: pointer;
+}
+.popContent .movePlace .toLeft{
+    background-image: url("../toLeft.png");
+}
+.popContent .movePlace .toRight{
+    display: none;
+    background-image: url("../toRight.png");
+    right: 0;
+}
 
 
 
