--- a/popup/custom.css
+++ b/popup/custom.css
@@ -91,13 +91,14 @@ body {
 
 .popContent{
     width: 50%;
+    /*max-width: 600px;*/
     min-width: 300px;
     height: auto;
     min-height: 600px;
     overflow-y: auto;
     border: 1px solid #797E8B;
     z-index: 999999999999999999;
-    position: absolute;
+    position: fixed;
     background-color: #fff;
     box-shadow: 2px 2px 10px 2px #797E8B;
     top: 0;
