--- a/popup/custom.css
+++ b/popup/custom.css
@@ -91,7 +91,7 @@ body {
 
 .popContent{
     width: 50%;
-    /*max-width: 600px;*/
+    max-width: 600px;
     min-width: 300px;
     height: auto;
     min-height: 600px;
@@ -103,6 +103,7 @@ body {
     box-shadow: 2px 2px 10px 2px #797E8B;
     top: 0;
     left: 50%;
+    display: none;
 }
 .popContent .movePlace{
     padding: 10px 0;
@@ -130,6 +131,9 @@ body {
     right: 0;
 }
 
+.close{
+    cursor: pointer;
+}
 
 
 
