--- a/popup/custom.css
+++ b/popup/custom.css
@@ -91,7 +91,7 @@ body {
 
 .popContent{
     width: 50%;
-    max-width: 600px;
+    /*max-width: 600px;*/
     min-width: 300px;
     height: auto;
     min-height: 600px;
