--- a/popup/custom.css
+++ b/popup/custom.css
@@ -37,6 +37,14 @@ body {
     font-size: 18px;
 }
 
+.AMCustomContent ul li input[type="radio"] {
+    -webkit-appearance: radio;
+}
+
+.AMCustomContent ul li input[type="checkbox"] {
+    -webkit-appearance: checkbox;
+}
+
 .text-area p{
     margin: 0;
     width: 86%;
