--- a/popup/custom.css
+++ b/popup/custom.css
@@ -145,26 +145,23 @@ body {
     cursor: pointer;
 }
 .popContent .movePlace .toLeft{
-    background-image: url("../toLeft.png");
+    background-image: url("https://static.chimeroi.com/am/toLeft.png");
 }
 .popContent .movePlace .toRight{
     display: none;
-    background-image: url("../toRight.png");
+    background-image: url("https://static.chimeroi.com/am/toRight.png");
     right: 0;
 }
-
+.popContent .movePlace .close{
+    left:90%;
+    height: 30px;
+    background-image: url("https://static.chimeroi.com/am/close.png");
+}
 .plugin-mask span {
     margin: 5px;
     font-weight: bold;
     background: white;
 }
-
-.close{
-    cursor: pointer;
-    margin: 3px;
-    font-size: 18px;
-}
-
 
 
 
